--- a/config.json
+++ b/config.json
@@ -1,51 +1,94 @@
 {
-	# foo
+	# Project name
 	"run_name" : "BERLIN",
-	"period_name" : "summer",
+        # Start date-time of the first simulation:
+        # format = "%Y-%m-%d %H:%M:%S %Z" or just "%Y-%m-%d %H:%M:%S" if the time-zone is UTC
 	"start_date" : "2008-01-16 00:00:00 UTC",
+	# The end time of the last simulation (same format as above)
 	"end_date" : "2008-02-15 00:00:00 UTC",
+        # Is this a restart run? (bool -> true/false, yes/no)
+	# FIXME: this hasn't been fully implemented yet (only working for 'false')
 	"restart" : "false",
-
+	# Number of hours of simulation of each run (excluding spin-up)
 	"num_hours_per_run":24,
+	# Number of hours of spin-up simulation of each run
 	"num_hours_spin_up":12,
+	# submit run as one job (if false, each run needs to get through the queue separately)
 	"run_as_one_job" : "true",
+	# Submit the WRF runs at the end of the script? (bool -> true/false, yes/no)
+	# FIXME: this hasn't been fully implemented yet (only working for 'false')
 	"submit_wrf_now" : "false",
+	# Submit the WPS component to the queue? (bool -> true/false, yes/no)
+	# FIXME: this hasn't been fully implemented yet (only working for 'false')
 	"submit_wps_component" : "false",
 
-	"run_dir" : "/short/w22/jds563/data/WRF/${run_name}",
+	# shell environment variables to be used for substitutions in this script
+	"environment_variables_for_substitutions":"HOME,USER,PROJECT,TMPDIR"
 
-## FIXME: currently unused
-	"pbs_queue" : "normalbw",
-	"pbs_ncpus" : "28",
-	"pbs_mem" : "128GB",
-	"pbs_walltime" : "10:00:00",
-	"pbs_name" : "BERLIN",
-	"pbs_opts" : "wd,other=gdata1,oe",
+	# top-level directory for the WRF and WPS outputs
+	"run_dir" : "/short/${PROJECT}/${USER}/data/WRF/${run_name}",
 
+	# filename of the template run-script
 	"run_script_template" : "run_script_template.sh",
+	# filename of the template script for clean-up duties
 	"cleanup_script_template" : "cleanup_script_template.sh",
+	# filename of the template script to coordinate the process
 	"main_script_template" : "main_script_template.sh",
-
-## FIXME: currently unused
-	"nci_modules" : "dot,pbs,intel-cc/17.0.1.132,intel-fc/17.0.1.132,netcdf/4.3.3.1,openmpi/2.0.0,nco,hdf5/1.8.10",
-
+	
+	# should the only task performed by the python script be to edit the WRF namelists and the shell scripts (the daily run-script, the daily clean-up script and the main coordination script)
 	"only_edit_namelists" : "false",
-
-	"wps_dir" : "/home/563/jds563/programs/WPS",
-	"wrf_dir" : "/short/w22/jds563/code/WRFV_3.9.1.1/WRFV3",
-	"nml_dir" : "/home/563/jds563/projects/runWRF/${run_name}",
+	
+	# the top-level WPS directory
+	"wps_dir" : "${HOME}/programs/WPS",
+	# the top-level directory containing the WRF executables and data-tables
+	"wrf_dir" : "/short/${PROJECT}/${USER}/code/WRFV_3.9.1.1/WRFV3",
+	# this directory (the directory with template namelists)
+	"nml_dir" : "${HOME}/projects/runWRF/${run_name}",
+	# scripts to copy from directory ${nml_dir} to each day
 	"scripts_to_copy_from_nml_dir":"add_remove_var.txt,nccopy_compress_output.sh",
-	"metem_dir" : "/short/w22/jds563/data/WRF/${run_name}/METEM",
+	# output location for the met_em files
+	"metem_dir" : "/short/${PROJECT}/${USER}/data/WRF/${run_name}/METEM",
 
+	# template namelist for WPS
+	"namelist_wps" : "${nml_dir}/namelist.wps",
+	# template namelist for WRF
+	"namelist_wrf" : "${nml_dir}/namelist.wrf",
+	# path to the GEOGRID.TBL file
+	"geogrid_tbl" : "${wps_dir}/geogrid/GEOGRID.TBL",
+	# path to the geogrid.exe program
+	"geogrid_exe" : "${wps_dir}/geogrid.exe",
+	# path to the ungrib.exe program
+	"ungrib_exe" : "${wps_dir}/ungrib.exe",
+	# path to the METGRID.TBL file
+	"metgrid_tbl" : "${wps_dir}/metgrid/METGRID.TBL",
+	# path to the metgrid.exe program
+	"metgrid_exe" : "${wps_dir}/metgrid.exe",
+	# path to the link_grib.csh script
+	"linkgrib_script" : "${wps_dir}/link_grib.csh",
+	# path to the wrf.exe program
+	"wrf_exe" : "${wrf_dir}/main/wrf.exe",
+	# path to the real.exe program
+	"real_exe" : "${wrf_dir}/main/real.exe",
+
+	# directory containing monthly SST files
 	"sst_monthly_dir" : "/g/data/ua8/NCEP_Polar/sst/rtg_high_res",
+	# directory containing daily SST files
 	"sst_daily_dir" : "/g/data/ua8/NCEP_Polar/sst/rtg_high_res",
+	# pattern for matching monthly SST files (date-time substitutions recognised)
 	"sst_monthly_pattern" : "rtg_sst_grb_hr_0.083.%Y%m",
+	# pattern for matching daily SST files (date-time substitutions recognised)
 	"sst_daily_pattern" : "rtg_sst_grb_hr_0.083.%Y%m%d",
+	# VTable file for the SST GRIB files
+	"sst_vtable": "${wps_dir}/ungrib/Variable_Tables/Vtable.SST",
+	# pattern for matching the full-atmosphere analysis files (date-time substitutions recognised as well as shell wildcards)
 	"analysis_pattern_upper" : "/g/data1/ub4/erai/grib/oper_an_pl/fullres/%Y/ei_oper_an_pl_075x075_90N0E90S35925E_%Y%m*",
+	# pattern for matching the surface-level analysis files (date-time substitutions recognised as well as shell wildcards)
 	"analysis_pattern_surface" : "/g/data1/ub4/erai/grib/oper_an_sfc/fullres/ei_oper_an_sfc_075x075_90N0E90S35925E_%Y%m*",
 	
-	"extra_variables_file" : "${nml_dir}/add_remove_var.txt",
-	## FIXME: currently unused:
-	"vtable_file" : "${wps_dir}/ungrib/Variable_Tables/Vtable.ERA-interim.pl",
-	"wrf_tables" : "${wrf_dir}/run/*{DAT,formatted,CAM,asc,TBL,dat,tbl,txt,tr}*"
+	# VTable file for the SST analysis files
+	"analysis_vtable" : "${wps_dir}/ungrib/Variable_Tables/Vtable.ERA-interim.pl",
+	# directory containing WRF input tables and data-files
+	"wrf_run_dir" : "${wrf_dir}/run"
+	# pattern to match to get the WRF input tables and data-files (within the folder ${wrf_run_dir}
+	"wrf_run_tables_pattern" : "(DAT|formatted|CAM|asc|TBL|dat|tbl|txt|tr)"
 }
