--- a/config.json
+++ b/config.json
@@ -39,12 +39,12 @@
     "only_edit_namelists" : "false",
 
     # should we use the RTG high resolution SSTs?
-    "use_high_res_sst_data" : "true",
+    "use_high_res_sst_data" : "false",
     
     # the top-level WPS directory
-    "wps_dir" : "${HOME}/programs/WPS",
+    "wps_dir" : "${HOME}/programs/WRFV_4.1.1/WPS",
     # the top-level directory containing the WRF executables and data-tables
-    "wrf_dir" : "/scratch/${PROJECT}/${USER}/code/WRFV_3.9.1.1/WRFV3",
+    "wrf_dir" : "${HOME}/programs/WRFV_4.1.1/WRFV3",
     # this directory (the directory with template namelists)
     "nml_dir" : "${HOME}/projects/runWRF/${run_name}",
     # scripts to copy from directory ${nml_dir} to each day
@@ -77,7 +77,7 @@
     "delete_metem_files" : "true",
 
     # analysis source - can be "ERAI" or "FNL"
-    "analysis_source" : "ERAI",
+    "analysis_source" : "FNL",
 
     # if analysis_source is "FNL", you will need a login for CISL/rda.ucar.edu
     "rda_ucar_edu_email" : "me@example.com",
@@ -101,8 +101,8 @@
     "analysis_pattern_surface" : "/g/data/ub4/erai/grib/oper_an_sfc/fullres/ei_oper_an_sfc_075x075_90N0E90S35925E_%Y%m*",
     
     # VTable file for the SST analysis files
-    "analysis_vtable" : "${wps_dir}/ungrib/Variable_Tables/Vtable.ERA-interim.pl",
-    # "analysis_vtable" : "${wps_dir}/ungrib/Variable_Tables/Vtable.GFS",
+    # "analysis_vtable" : "${wps_dir}/ungrib/Variable_Tables/Vtable.ERA-interim.pl",
+    "analysis_vtable" : "${wps_dir}/ungrib/Variable_Tables/Vtable.GFS",
     # directory containing WRF input tables and data-files
     "wrf_run_dir" : "${wrf_dir}/run",
     # pattern to match to get the WRF input tables and data-files (within the folder ${wrf_run_dir}
